objects/Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sample Custom Setting</description>
    <fields>
        <fullName>Can_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync__c</fullName>
        <label>Last Sync</label>
        <type>Date</type>
    </fields>
    <label>Settings</label>
</CustomObject>